; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-source.c_data_valid.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-source.c_data_valid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_source = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.obs_source*, i8*)* @data_valid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @data_valid(%struct.obs_source* %0, i8* %1) #0 {
  %3 = alloca %struct.obs_source*, align 8
  %4 = alloca i8*, align 8
  store %struct.obs_source* %0, %struct.obs_source** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.obs_source*, %struct.obs_source** %3, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = call i64 @obs_source_valid(%struct.obs_source* %5, i8* %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %15

9:                                                ; preds = %2
  %10 = load %struct.obs_source*, %struct.obs_source** %3, align 8
  %11 = getelementptr inbounds %struct.obs_source, %struct.obs_source* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = icmp ne i64 %13, 0
  br label %15

15:                                               ; preds = %9, %2
  %16 = phi i1 [ false, %2 ], [ %14, %9 ]
  %17 = zext i1 %16 to i32
  ret i32 %17
}

declare dso_local i64 @obs_source_valid(%struct.obs_source*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
